I replaced a multiline comment, with a H::T <!-- tmpl if --> block, which should never eval to true.

--- a/dada/DADA/Template/templates/send_email_screen.tmpl
+++ b/dada/DADA/Template/templates/send_email_screen.tmpl
@@ -85,15 +85,18 @@
          <input type="file" name="attachment_1"  size="36" /><br /> 
          <input type="file" name="attachment_2"  size="36" /><br /> 
          <input type="file" name="attachment_3"  size="36" /><br />  
-         <!-- You can continue to add to this list, like so: 
 
-         <input type="file" name="attachment_4"  size="36" /><br />          
-         <input type="file" name="attachment_5"  size="36" /><br />          
+         <!-- tmpl_if comment --> 
 
-		Just reflect the number of attachments you have in the, "attachment" 
-		hidden form field, below: 
+			You can continue to add to this list, like so: 
+
+	         <input type="file" name="attachment_4"  size="36" /><br />          
+	         <input type="file" name="attachment_5"  size="36" /><br />          
+
+			Just reflect the number of attachments you have in the, "attachment" 
+			hidden form field, below: 
 		
-		--> 
+		<!-- /tmpl_if --> 
 
          </p>
          
