Moved the "More headers" button higher

--- a/dada/DADA/Template/templates/message_headers_fieldset_widget.tmpl
+++ b/dada/DADA/Template/templates/message_headers_fieldset_widget.tmpl
@@ -5,6 +5,14 @@
  <legend>
   Message Headers
  </legend>
+	<p>
+		  <strong>
+		   <a href="#" onclick="toggleDisplay('headers');return false;">
+			+/-
+		   </a> Additional Headers
+		  </strong>
+	</p>
+
 	<div id="headers" style="display:none">  
 	   <table width="100%">
 
@@ -179,13 +187,7 @@
 	  
 
  </table>
-<p>
-		  <strong>
-		   <a href="#" onclick="toggleDisplay('headers');return false;">
-			+/-
-		   </a> Headers
-		  </strong>
-</p>
+
 
  
 </fieldset>
