Renamed it "Partial Mailing List Sending"

--- a/dada/DADA/Template/templates/partial_sending_options_widget.tmpl
+++ b/dada/DADA/Template/templates/partial_sending_options_widget.tmpl
@@ -10,7 +10,7 @@
      <legend>
        <a href="#" id="partial_sending_options_widget_label" onclick="toggleDisplay('partial_sending_options_widget', 'partial_sending_options_widget_label');return false;">
       +/- 
-     </a>Partial Sending Options
+     </a>Partial Mailing List Sending
      </legend>    
      
      <div id="partial_sending_options_widget" style="display:none;width:90%">
