--- a/dada/DADA/Template/templates/preview_template.tmpl
+++ b/dada/DADA/Template/templates/preview_template.tmpl
@@ -4,12 +4,12 @@
  This is a 
   <strong>
    preview
-  </strong> (read: not saved!!!!) 
-         of your template.
+  </strong> 
+         of your mailing list template.
  </p>
 
 <p>
- To save or edit, close this window and hit the 
+ To save or edit, close this window and click the 
  
 <strong>
  Change Template
