Renamed it, "Archiving"

--- a/dada/DADA/Template/templates/send_email_archive_options_widget.tmpl
+++ b/dada/DADA/Template/templates/send_email_archive_options_widget.tmpl
@@ -17,7 +17,7 @@
 <legend><a href="#" onclick="toggleDisplay('archive_options_widget');return false;">
  +/-
  </a>
- Archive Options
+ Archiving
 </legend>
 
 <div id="archive_options_widget" style="display:none">
