Just some clarifications

--- a/dada/DADA/Template/templates/subscription_options_screen.tmpl
+++ b/dada/DADA/Template/templates/subscription_options_screen.tmpl
@@ -6,8 +6,8 @@
 
 <!-- tmpl_if SUBSCRIPTION_QUOTA --> 
 
-    <p class="error">
-     Currently, there is a global limit of <!-- tmpl_var SUBSCRIPTION_QUOTA --> Subscribers per list.
+    <p class="alert">
+     Currently, there is a global limit of, <!-- tmpl_var SUBSCRIPTION_QUOTA --> subscribers per Mailing List.
     </p>
 <!-- tmpl_else --> 
 
