Just some clarifications

--- a/dada/DADA/Template/templates/view_list_screen.tmpl
+++ b/dada/DADA/Template/templates/view_list_screen.tmpl
@@ -69,16 +69,16 @@
 <!-- tmpl_if list_type_isa_black_list -->
 	
 	<h1>
-	 Your Blacklist
+	 Your Black List
 	</h1>
 	<p>
-	 A blacklist is a set of rules that say who cannot subscribe to 
+	 A Black List is a set of rules that say who cannot subscribe to 
 	 your list. You can disallow a single email address by adding that email 
-	 address (you@yours.com) to the blacklist.
+	 address (you@yours.com) to the Black List.
 	</p>
 	<p>
-	 You can also use the blacklist to match a part of an email address. 
-	 For example, adding 'example.com' to the blacklist will disallow 
+	 You can also use the Black List to match a part of an email address. 
+	 For example, adding 'example.com' to the Black List will disallow 
 	 anyone that has 'example.com' in their email address.
 	</p>
 		
@@ -87,7 +87,7 @@
 		<!-- tmpl_if GLOBAL_BLACK_LIST -->
 			
 			<p class="positive">
-			 * The Global Blacklist has been enabled.
+			 * The Global Black List has been enabled.
 			</p>
 			
 		<!--/tmpl_if-->
@@ -109,7 +109,7 @@
 	<!-- tmpl_if black_list_changes_done -->
 	
 		<p class="positive">
-		 Your changes to the blacklist settings were successful!
+		 Your changes to the Black List settings were successful!
 		</p>
 		
 	<!--/tmpl_if-->
@@ -256,7 +256,7 @@
 		    <td>
 		     <p>
 		      <label for="black_list">
-		       Activate blacklist rules
+		       Activate Black List rules
 		      </label>
 		     </p>
 		    </td>
@@ -270,7 +270,7 @@
 		    <td>
 		     <p>
 		      <label for="add_unsubs_to_black_list">
-		       Move email addresses that have just been unsubscribed to the blacklist
+		       Move email addresses that have just been unsubscribed to the Black List
 		      </label>
 		     </p>
 		    </td>
@@ -290,7 +290,7 @@
 		      By selecting both this option <strong>and</strong> the one directly above it, 
 		      you effectively collect a &quot;blacklist-in-waiting&quot; of all unsubscribers 
 		      for possible <em>future</em> use. Otherwise, selecting this option alone is the 
-		      same as disabling your blacklist outright.
+		      same as disabling your Black List outright.
 		     </p>
 		    </td>
 		   </tr>
