--- a/dada/DADA/Template/templates/sending_tuning_options.tmpl
+++ b/dada/DADA/Template/templates/sending_tuning_options.tmpl
@@ -1,10 +1,10 @@
 <!-- begin sending_tuning_options.tmpl --> 
 
 <p>
- Manage List  
-  &#187;
+  Mail Sending
+	&#187;
    <a href="<!-- tmpl_var S_PROGRAM_URL -->?f=sending_options">
-    Sending Options
+	Sending Preferences 
   </a>
  &#187;
 
