Whoops! Missed one...

--- a/dada/DADA/Template/templates/sending_tuning_options.tmpl
+++ b/dada/DADA/Template/templates/sending_tuning_options.tmpl
@@ -328,7 +328,7 @@
 
 <p>
  <a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=adv_sending_preferences">
-  &lt;-- Back to Advanced Sending Options...
+  &lt;-- Back to Advanced Sending Preferences...
  </a>
 </p>
 
