--- a/dada/DADA/Template/templates/edit_html_type_screen.tmpl
+++ b/dada/DADA/Template/templates/edit_html_type_screen.tmpl
@@ -7,7 +7,7 @@
 <p>
  You can customize many of the HTML screens 
  <!-- tmpl_var PROGRAM_NAME --> produces. <!-- tmpl_var PROGRAM_NAME --> uses 
- &quot;pseudo tags&quot; to represent data that may change regularly. 
+ template tags to represent data that may change regularly. 
  A list of relevant tags is shown at the end of this page.
 </p>
 
