Pod/HTML fixes.

--- a/dada/DADA/Template/templates/sending_preferences_screen.tmpl
+++ b/dada/DADA/Template/templates/sending_preferences_screen.tmpl
@@ -4,7 +4,7 @@
 <!-- tmpl_if list_settings.send_via_smtp --> 
 	<p class="alert">Messages are currently being sent via SMTP
 <!-- tmpl_if no_smtp_server_set -->
-		, but make sure to set up your SMTP server settings</a>.
+		, but make sure to set up your SMTP server settings.
 	<!-- tmpl_else --> 
 		using SMTP server, <!-- tmpl_var list_settings.smtp_server --> 
 	<!-- /tmpl_if --> 
