--- a/dada/DADA/Template/templates/adv_archive_options_screen.tmpl
+++ b/dada/DADA/Template/templates/adv_archive_options_screen.tmpl
@@ -216,7 +216,7 @@ Email Address Protection
    <a href="http://mailhide.recaptcha.net/" target="_blank">
     (More Info)
    </a> <!-- tmpl_unless can_use_recaptcha_mailhide -->
-	      <span class="error">Disabled. You have to configure reCAPTCHA MailHide in the Dada::Config.pm file.</span>
+	      <span class="error">Disabled. Make sure have to configure reCAPTCHA MailHide in the Dada::Config.pm file and the Perl CPAN module Captcha::reCAPTCHA::Mailhide is installed..</span>
         <!-- /tmpl_unless --> 
   </td>
  </tr>
