--- a/dada/DADA/Template/templates/congrats_screen.tmpl
+++ b/dada/DADA/Template/templates/congrats_screen.tmpl
@@ -27,13 +27,13 @@
  </h1>
  <p>
   You installed <!-- tmpl_var name="PROGRAM_NAME" --> correctly. The next 
-  thing to do is set up a list or two. Be sure you know your Root Password 
-  before you begin making a new list.
+  thing to do is set up a Mailing List. Be sure you know your <!-- tmpl_var PROGRAM_NAME --> Root Password 
+  before you begin making a new Mailing List.
  </p>
  <p>
   <strong>
-   First, please read, understand and agree to the GNU Public License, and 
-   agree not to use Dada Mail for unsolicited email (spam):
+   First, please read, understand and agree to the <em>GNU Public License</em>, and 
+   agree not to use Dada Mail for unsolicited email (SPAM):
   </strong>
  </p>
  <p align="center">
