--- a/dada/DADA/Template/templates/default_admin_template.tmpl
+++ b/dada/DADA/Template/templates/default_admin_template.tmpl
@@ -32,7 +32,7 @@
  <body id="DadaAdmin" onLoad="init();">
   <div id="AdminPageWrapper">
    
-   <div id="Header">
+   <div id="Header" onclick="location.href='<!-- tmpl_var PROGRAM_URL -->';" style="cursor:pointer;">
     <span id="Title">
  <!-- tmpl_var root_login_message -->
 
