--- a/dada/DADA/Template/templates/delete_list_success_screen.tmpl
+++ b/dada/DADA/Template/templates/delete_list_success_screen.tmpl
@@ -1,11 +1,11 @@
 <!-- begin delete_list_success_screen.tmpl -->
 
 <p>
- You have deleted the list.
+ You have deleted your Mailing List.
 </p>
 <p>
  <a href="<!--tmpl_var PROGRAM_URL -->">
-  Return to the <!-- tmpl_var PROGRAM_NAME --> main page.
+  Return to the <!-- tmpl_var PROGRAM_NAME --> Default Screen.
  </a>
 </p>
 
