Changed a background color.

--- a/dada/DADA/Template/templates/default_css.css
+++ b/dada/DADA/Template/templates/default_css.css
@@ -329,7 +329,7 @@ p.link_to_screen {
     float: right; 
     padding:5px;
     /* width:150px; */
-    background-color:#ff9;
+    background-color:#ffc;
     border:1px dotted #333;
 }
 
